src/objects/E2_DashboardSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Estimator 2.0 - Hierarchy Setting
Stores the report id, filter key, filter value for particular report</description>
    <fields>
        <fullName>Report1Id__c</fullName>
        <description>This field stores the first report unique id showing in the dashboard on Create Estimate page</description>
        <inlineHelpText>This field stores the first dashboard report salesforce id</inlineHelpText>
        <label>Report1Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report1pc0__c</fullName>
        <description>This field stores the first report&apos;s filter key</description>
        <inlineHelpText>This field stores the first report&apos;s filter key</inlineHelpText>
        <label>Report1pc0</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report2Id__c</fullName>
        <description>This field stores the second report&apos;s salesforce id</description>
        <inlineHelpText>This field stores the second report&apos;s salesforce id</inlineHelpText>
        <label>Report2Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report2pc0__c</fullName>
        <description>This field stores the second report&apos;s filter key</description>
        <inlineHelpText>This field stores the second report&apos;s filter key</inlineHelpText>
        <label>Report2pc0</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report3Id__c</fullName>
        <description>This field stores the third report&apos;s salesforce id</description>
        <inlineHelpText>This field stores the third report&apos;s salesforce id show on the create estimate page</inlineHelpText>
        <label>Report3Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report3pc0__c</fullName>
        <description>This field stores the second report&apos;s filter key</description>
        <inlineHelpText>This field stores the second report&apos;s filter key</inlineHelpText>
        <label>Report3pc0</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>E2 DashboardSettings</label>
</CustomObject>